samples/_failures_safe/1761186407_cd3ce9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05478efe.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_05478efe.c:147:5: error: expected expression at end of input
  147 |     if (
      |     ^~
./samples/SAFE/__tmp_05478efe.c:147:5: error: expected declaration or statement at end of input
